--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,6 @@
         android:id="@+id/textView"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:layout_marginEnd="156dp"
         android:gravity="center"
         android:text="Dear Mr.Zhou :"
         android:textSize="25sp"
@@ -26,7 +25,6 @@
         android:id="@+id/textView2"
         android:layout_width="350dp"
         android:layout_height="230dp"
-        android:layout_marginStart="36dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:text="Happy
@@ -54,8 +52,9 @@
         android:text="Send"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.532"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.946" />
+        app:layout_constraintVertical_bias="0.937" />
 
 </android.support.constraint.ConstraintLayout>
